3.23.0
======
Jul 26, 2022
- Introduce `gwen.auto.trim.data.csv=true|false` to control whether or not to trim csv data (default is `false`)

3.22.0
======
Jul 21, 2022
- Add more DSLs to support writing to files
  - `I <write|append> "<text>" to "<filepath>" file`
  - `I <write|append> <textRef> to "<filepath>" file`
  - `I <write|append> new line to "<filepath>" file`
  - `I <write|append> "<text>" to <filepathRef> file`
  - `I <write|append> <textRef> to <filepathRef> file`
  - `I <write|append> new line to <filepathRef> file`

3.21.0
======
Jul 20, 2022
- Add DSLs to support writing to files
  - `I write "<text>" to "<filepath>" file`
  - `I write <textRef> to "<filepath>" file`
  - `I write new line to "<filepath>" file`

3.20.1
======
Jul 20, 2022
- Fix list values in settings

3.20.0
======
Jul 18, 2022
- Drop configurable `gwen.cli.options.conf` setting
- Give GWEN_XXX environment variables precedence over settings and system properties
- Cater for settings with multi name-value pairs

3.19.1
======
Jul 13, 2022
- Relax imperative step rules for Data and NoData annotated steps

3.19.0
======
Jun 30, 2022
- Add optional `required` attriubte to `Examples` tag 
  - If `true`, raise error if no data is found and tag background steps with `NoData` annotation
  - If `false` (default), no erorr is raised
- Include deep nested attachemnts in outlines in html reports
- Override assertion exceptions with custom messages if specified

3.18.1
======
Jun 28, 2022
- Fix dry run for system process bindings

3.18.0
======
Jun 28, 2022
- Add DSL for defining bindings by unix system process
  - `<attribute> <is|will be> defined by unix system process "<expression>"`
- Dropped DSL for executing delimited unix system process
  - `I execute unix system process "<process>" delimited by "<delimiter>"`

3.17.1
======
Jun 27, 2022
- Capture cause in exception when a system process call fails

3.17.0
======
Jun 26, 2022
- `gwen.parallel.maxThreads` 